--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
     <meta name="robots" content="noodp" />
-    <title>My New Hugo Site</title><meta name="author" content="">
+    <title>Amuartsivul's Blog</title><meta name="author" content="由自且自由">
 <meta name="author-link" content="">
 <meta name="description" content="" /><meta name="keywords" content='Hugo, FixIt' /><meta itemprop="name" content="My New Hugo Site">
 <meta itemprop="description" content=""><meta property="og:title" content="My New Hugo Site" />
